GARPDev-salesforce/eclipse/GARPDev/src/objects/Site__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To define weather the Location is active or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <summarizedField>Venue__c.Capacity__c</summarizedField>
        <summaryFilterItems>
            <field>Venue__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Venue__c.Site__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <label>Cloned From</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Exam_Attempts__c</fullName>
        <label>No of Exam Registrations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Members_Enrolled__c</fullName>
        <label>No of Seats Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Members_Enrolled_for_ERP__c</fullName>
        <label>No of Members Enrolled for ERP</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Members_Enrolled_for_FRM1_2__c</fullName>
        <label>No of Members Enrolled for FRM1 &amp;2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Members_Enrolled_for_FRM1_Only__c</fullName>
        <label>No of Members Enrolled for FRM1 Only</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Members_Enrolled_for_FRM_2_Only__c</fullName>
        <label>No of Members Enrolled for FRM 2 Only</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_selectable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-selectable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Over_Capacity__c</fullName>
        <formula>No_of_Exam_Attempts__c &gt;  Capacity__c</formula>
        <label>Over Capacity</label>
        <type>Checkbox</type>
    </fields>
    <label>Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Capacity__c</columns>
        <columns>No_of_Exam_Attempts__c</columns>
        <columns>Over_Capacity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Cloned_From__c</columns>
        <filterScope>Everything</filterScope>
        <label>All  Sites</label>
    </listViews>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>